@@ -5,6 +5,7 @@
 - Allows for moving through both online and local file infos
 - Fix separator errors
 - Fix top250 not disabling
+- Add Image viewer for persons
 
 0.9.41
 - Updates to infoline label handling
